# adsorption-file-parser

./: .pre-commit-config.yaml  DEVELOPMENT.rst  LICENSE  README.rst  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI-CD.yaml
src/adsorption_file_parser/: __init__.py  bel_common.py  bel_csv.py  bel_dat.py  bel_excel.py  generic_aif.py  generic_csv.py  generic_excel.py  mic_excel.py  mic_xml.py  qnt_txt.py  sms_dvs_excel.py  smsdvs_excel.py  trp_excel.py  trp_xml.py
src/adsorption_file_parser/utils/: bel_common.py  common_utils.py  unit_parsing.py  units.py
tests/: conftest.py  test_3p.py  test_bel.py  test_generic_csv.py  test_generic_excel.py  test_mic.py  test_qnt.py  test_sms_dvs.py  test_smsdvs.py  test_unit_parser.py
tests/data/3p/: AC_ref_filter_Ar_87K_run 3_rep.json  CBV712_N2_77K.json  CBV712_N2_77K.jwgbt  CBV712_N2_77K.xlsx
tests/data/bel/: 1.json  200819-2_jis.json  ASch082B_Zndmbdcdabco_C2H4_Exp191004a_weight correction_jis.json  ASch082C_Zntmbdcdabco_C2H6_Exp190819a_jis.json  Asch065B_C2H6_298K_Exp190327a_jis.json  BF-010-DUT-13-CH4-190K-run1-export.json  CEP 3xx-2-B 120529.json  DUT-13-CH4-190K.json  DUT-13_CH4_111K.json  DUT-13_CH4_111K_run2.json  DUT-32-N2_77K(BelMax).json  DUT-49-SKDM019_SCDEtOH_Act.150C_Ar_87K.json  DUT-49_Ar_87K.json  DUT-49_N2_77K.json  DUT-49_nbutane_273K.json  DUT-49_nbutane_298K.json  DUT-49_nbutane_298K_viele_Punkte_hohe_masse.json  DUT-67-N2_77K.json  DUT-67_DCM_298K.json  DUT-67_EtOH_298K.json  DUT-67_H2O_298K.json  DUT-67_MeOH_298K.json  DUT-67_acetone_298K.json  DUT-67_hexane_298K.json  DUT-67_isopropanol_298K.json  DUT-67_toluol_298K.json  DUT-67_wasser_298K.json  DUT-8_zn_etoh_298k.json  DUT67_1_Garching_DCM_298K.json  DUT67_1_Garching_MeOH_298K.json  DUT67_1_Garching_acetone_298K.json  DUT67_1_Garching_hexane_298K.json  DUT67_1_Garching_isopropanol_298K.json  DUT67_1_Garching_toluol_298K.json  DUT67_1_Garching_wasser_298K.json  Sample_C.json  Sample_C.xls  Sample_D.json  Sample_D.xls  Sample_E.json  (+1 more)
tests/data/generic/: HKUST-1(Cu) CO2 303K.csv  HKUST-1(Cu) CO2 303K.json  MCM-41 N2 77K.csv  MCM-41 N2 77K.json  generic.json  generic.xls
tests/data/mic/: Sample_A.json  Sample_A.xls  Sample_B.json  Sample_C.json  Sample_D.json  Sample_E.json  Sample_F.json  Sample_G.json  Sample_H.json  Sample_I.json  Sample_J.json  Sample_K.json  Sample_L.json  Sample_M.json  Sample_M.xls  Sample_N.json
tests/data/qnt/: BF001 (Raw Analysis Data).json  BF001 DUT-13 (Raw Analysis Data).json  CU(BIPY)(BTB)_N2_77 (Raw Analysis Data).json  DUT-60_N2 (Raw Analysis Data).json  DUT-6_LP_N2 (Raw Analysis Data).json  DUT-75_N2 (Raw Analysis Data).json  RE-22 (Raw Analysis Data).json
tests/data/sms_dvs/: MIL-101Cr H2O@air 30c.json  Takeda 5A water 30c.json
tests/data/smsdvs/: 13X water 30c.json
