[metadata]
name = adsorption_file_parser
description = Collection of parsers for (nearly) all commercial adsorption instrumentation.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = adsorption, characterization, porous materials, isotherms, sorption
author = AIF Dev Team
author_email = mail@pauliacomi.com
license = MIT license
license_files = LICENSE
url = https://github.com/AIF-development-team/adsorption-file-parser
project_urls =
	Source Code = https://github.com/AIF-development-team/adsorption-file-parser
	# Documentation = https://adsorption-file-parser.readthedocs.io
classifiers =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Physics
	Topic :: Scientific/Engineering :: Chemistry

[options]
package_dir =
	=src
packages = find:
python_requires = >=3.6
zip_safe = True
include_package_data = True
tests_require =
	pytest
	pytest-cov
install_requires =
	xlrd >= 1.1
	xlwt >= 1.3
	openpyxl

[options.packages.find]
where = src

[options.extras_require]
dev =
	pytest
    pytest-cov
	yapf
	isort
	pylint
	flake8
	autopep8
	pydocstyle
	bump2version

[flake8]
ignore =
	E402
	W503
	W504
	E126
	E731
max-line-length = 140
exclude = .tox,.eggs,ci/templates,build,dist
docstring_style = numpy

[darglint]
docstring_style = numpy
